--- a/packages/builder/index.html
+++ b/packages/builder/index.html
@@ -6,7 +6,7 @@
 	<title>Budibase Builder</title>
 	<link rel='icon' type='image/png' href='./src/favicon.png'>
 </head>
-<body id="app">
+<body id="app" class="spectrum spectrum--medium spectrum--darkest">
 	<script type="module" src='/src/main.js'></script>
 </body>
 </html>
