--- a/packages/builder/index.html
+++ b/packages/builder/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html class="spectrum spectrum--medium spectrum--darkest" lang="en" dir="ltr">
 <head>
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
 	<title>Budibase Builder</title>
 	<link rel='icon' type='image/png' href='./src/favicon.png'>
 </head>
-<body id="app" class="spectrum spectrum--medium spectrum--darkest" lang="en" dir="ltr">
+<body id="app">
 	<script type="module" src='/src/main.js'></script>
 </body>
 </html>
