allow navigation to other URLs than /builder

--- a/packages/builder/index.html
+++ b/packages/builder/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
-	<title>Budibase Builder</title>
+	<title>Budibase</title>
 	<link rel='icon' type='image/png' href='./src/favicon.png'>
 </head>
 <body id="app">
