--- a/packages/builder/index.html
+++ b/packages/builder/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
 	<title>Budibase</title>
-	<link rel='icon' type='image/png' href='./src/favicon.png'>
+	<link rel='icon' href='./src/favicon.ico'>
 </head>
 <body id="app">
 	<script type="module" src='/src/main.js'></script>
