Remove Inter font fully and replace with Source Sans Pro, fix favicon import path

--- a/packages/builder/index.html
+++ b/packages/builder/index.html
@@ -4,7 +4,12 @@
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
 	<title>Budibase</title>
-	<link rel='icon' href='./src/favicon.ico'>
+	<link rel='icon' href='/src/favicon.ico'>
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link
+		href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap"
+		rel="stylesheet"
+	/>
 </head>
 <body id="app">
 	<script type="module" src='/src/main.js'></script>
